# robot-agentic-ai

./: .gitignore  LICENSE  README.md
agent-runtime/: .env.example  Dockerfile  README.md  __init__.py  access_token.py  agent_manager.py  config.json  config.py  deploy.py  deploy_runtime.py  logger_setup.py  main.py  mcp_manager.py  prompt.py  pyproject.toml  strands_agent_runtime.py  strands_agent_runtime_deploy.py  strands_agent_runtime_test.py  strands_agent_runtime_test_local.sh  streamining_agent_response.ipynb  test_agent_runtime.py  test_memory_hook_provider.py  test_memory_runtime.py  tools.py
agent-runtime/config/: config.json  config.py
agent-runtime/core/: __init__.py  agent_manager.py  stream_processor.py
agent-runtime/prompts/: __init__.py  prompt.py
agent-runtime/scripts/: __init__.py  deploy.py  deploy.sh  logs.sh
agent-runtime/tests/: test_mcp_remote.py
agent-runtime/tools/: get_robot_status.py  observer_env.py  observer_env_agent.py  robot_tools.py  test_get_robot_status.py  test_observer_env.py  test_robot_tools.py
agent-runtime/utils/: __init__.py  s3_util.py
amplify-frontend/: .gitignore  ENV_CONFIG_README.md  README-DEPLOY.md  README.md  amplify.yml  amplify_outputs.json  craco.config.js  deploy-pipeline.sh  deploy-production.sh  deploy.sh  package-lock.json  package.json  quick-deploy.sh  tsconfig.json  vite.config.ts
amplify-frontend/amplify/: backend.ts
amplify-frontend/amplify/auth/: resource.ts
amplify-frontend/public/: index.html
amplify-frontend/src/: App.tsx  env.json  index.css  index.tsx  theme.ts
amplify-frontend/src/components/: ChatInterface.tsx  Layout.tsx  StreamingMessage.tsx
amplify-frontend/src/config/: quickCommandButton.json  robotControlButton.json
amplify-frontend/src/hooks/: useStreamingMessages.ts
amplify-frontend/src/lib/: BedrockAgentCore.ts  LambdaClient.ts  PollyTTS.ts  amplify.ts  aws-config.ts  aws-credentials.ts  aws-utils.ts  env-config.ts  index.ts  utils.ts
amplify-frontend/src/lib/aws/: README.md  examples.ts  index.ts  initialize.ts
amplify-frontend/src/pages/: Agent.tsx  Dashboard.tsx  Home.tsx  Profile.tsx
api-gateway/: README.md  requirements.txt
api-gateway/cdk/: app.ts  package.json
api-gateway/deploy/: cloudformation.yaml  deploy.sh  package.sh
api-gateway/lambda_functions/chat_suggestions/: README.md  handler.py  requirements.txt  test_memory_integration.py
api-gateway/lambda_functions/robot_feedback/: handler.py
api-gateway/scripts/: deploy_lambda.sh  quick_deploy.sh  setup.sh  test_api.sh  test_local.sh  test_simple.sh
backend/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py
backend/app/api/: chat.py  commands.py  health.py  robot.py  stream.py  voice.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  mcp_service.py  robot_control_service.py  strands_agent_service.py  strands_bedrock_service.py  voice_service.py
backend/app/utils/: helpers.py
detection-manager/: create_detection_manager.py
feedback-manager/: config.json  create_feedback_manager.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  MessageBubble.tsx  RecommendedCommands.tsx  TaskStackPanel.tsx  VoiceRecorder.tsx
frontend/src/services/: ApiService.ts  SSEService.ts
frontend/src/types/: Message.ts
gateway/mcp-interface/: create_gateway_tool.py  tool_spec.json
gateway/mcp-interface/lambda-mcp-interface-for-robo/: lambda_function.py
robo-controller/lambda-robo-controller-for-robo/: lambda_function.py
