[project]
name = "robot-agentic-ai-backend"
version = "1.0.0"
description = "FastAPI backend for robot control with Amazon Bedrock Claude 3.7 Sonnet"
authors = [
    {name = "Robot Agentic AI Team", email = "team@robot-agentic-ai.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "anthropic>=0.40.0",
    "pydub>=0.25.1",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gTTS>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "sse-starlette>=2.0.0",
    "mcp>=1.13.1",
    "strands-agents>=1.7.1",
    "strands-agents-tools>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[project.scripts]
start = "main:main"
